Fri Jan 16 00:36:31 1998  Federico Mena  <federico@bananoid.nuclecu.unam.mx>

	* gtk/gtkhandlebox.c: Now we use a GtkWindow of type
	GTK_WINDOW_DIALOG as a destination for reparenting the child of
	the handle box.  This solves the problem of having X calls in
	Gtk.  It also makes the handle box work with KWM, OLVWM, 4Dwm (so
	I expect mwm to work as well).  I hadn't noticed that previously
	it only worked with fvwm and twm.

	* gtk/gtkhandlebox.h (struct _GtkHandleBox): Removed the
	real_parent field, as it is never used.
	(struct _GtkHandleBox): Added a float_window field.  This is a
	GtkWindow to where the child is now reparented.

	* gtk/gtkhandlebox.c: Lots of changes all over the place.  Now the
	widget has two windows.  The steady_window stays put in the parent
	container, and the widget->window is the one that gets
	reparented.  Now that window is transient, in compliance with the
	ICCCM, instead of an OverrideRedirect window.

	We have two windows so that we can properly receive Expose events
	for the thin 3D line that marks the place where the handlebox is
	docked.

	* gtk/gtkhandlebox.h (struct _GtkHandleBox): Added fields for
	dragging (mouse position information).  Added fleur_cursor so that
	we look pretty.  Added steady_window field; it is the window that
	actually stays on the parent (widget->window is the one that gets
	reparented).

Thu Jan 15 19:03:19 1998  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gtk/gtkclist.c (gtk_clist_set_column_width): Call
	gtk_clist_size_allocate_columns every time the column
	configuration changes. 

Fri Jan 16 01:55:17 1998  Tim Janik  <timj@psynet.net>

	* improved the gtk_widget_set handling. removed GtkArgFunc and added
	  GtkArgSetFunc and GtkArgGetFunc in _GtkTypeInfo.
	  performance consuming strcmp() calls are avoided in gtk_*_set_arg()
	  now, it is passed an arg_id on which it can switch() now.

	* gtk/gtkobject.h:
	* gtk/gtkobject.c (gtk_object_add_arg_type): added parameter arg_id.

	* gtk/gtktypeutils.h: